@@ -18,6 +18,8 @@
 
 echo "export JAVA_HOME=${JAVA_HOME}" >> ${HADOOP_HOME}/etc/hadoop/hadoop-env.sh
 
+echo "export HADOOP_OPTS=\"${HADOOP_OPTS} --add-opens=java.base/java.nio=ALL-UNNAMED \"" >> ${HADOOP_HOME}/etc/hadoop/hadoop-env.sh
+
 cat <<EOF > /etc/ssh/ssh_config
 Host *
    StrictHostKeyChecking no
